# hapa-graphify

./: .env.example  .gitignore  AGENTS.md  README.md  SECURITY.md  hapa-node.json  pyproject.toml
apps/hapa-narrative/: hapa-node.json
config/: hapa-graphify.sources.json
desktop/: main.js  package.json  preload.js  smoke-check.mjs
docs/: ACCESS_POINTS.md  AGENT_GUIDE.md  API.md  CLI.md  DATA_BOUNDARY.md  DESKTOP.md  FEATURE_PARITY.md  HAPA_ECOSYSTEM.md  HUMAN_GUIDE.md  MCP.md  NARRATIVE.md  OVERVIEW.md  PERFORMANCE.md  PUBLISHING.md  SKILLS.md  TESTING.md  THREAT_MODEL.md  USE_CASES.md  WRITEBACK.md  index.html
docs/adr/: 0001-graphify-wrapper-strategy.md
docs/assets/: pages.css
docs/demo/: index.html
docs/demo-data/: atlas.json
docs/narrative/: index.html
docs/protocol/: HAPA_GRAPHIFY_PROTOCOL.md
docs/schemas/: hapa-graph-fragment.schema.json
hapa_graphify/: __init__.py  __main__.py  api.py  benchmark.py  core.py  mcp.py  narrative.py  narrative_enrichment.py  writeback.py
reports/: performance-baseline.json  writeback-plan.json
scripts/: build_pages_demo.py  generate_hapa_narrative_images.py  run_hapa_narrative.py  run_hapa_narrative_enrichment.py
skills/hapa-narrative-enrichment/: SKILL.md
skills/hapa-narrative-weekly/: SKILL.md
tests/: test_api.py  test_benchmark.py  test_core.py  test_desktop_assets.py  test_mcp.py  test_narrative.py  test_narrative_enrichment.py  test_security_privacy.py  test_writeback.py
tests/fixtures/: README.md  golden_graph_fragment.json  source_registry_minimal.json
ui/: index.html
(+12 files in other folders)
