[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hapa-graphify"
version = "0.1.0"
description = "Hapa-standard graph compiler and provenance-preserving Graphify wrapper."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
graphify = ["graphifyy==0.8.33"]
images = ["pillow>=10"]

[project.scripts]
hapa-graphify = "hapa_graphify.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
